# bxdevtools

./: CMakeLists.txt  README.rst
source/libbxdev/: _bxdev_app.bash  _bxdev_git.bash  _bxdev_message.bash  _bxdev_package.bash  _bxdev_utils.bash  _bxdev_version.bash  libbxdev.bash.in
source/pybxdev/: __init__.py.in  bxdevtools.py
source/pybxdev/package/: __init__.py  package.py
source/pybxdev/tools/: __init__.py  configure_file.py
source/scripts/: bxconfigure_file  bxdevtools  bxdevtools-config.in  bxgit_create_feature_branch  bxgit_terminate_feature_branch  configure_file
